--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "hello_world"
+name = "zachary_hello_world"
 version = "0.1.0"
-authors = ["Your Name <you@example.com>"]
+authors = ["Zachary Milonas <zachary@milonas.pl>"]
 
